add module testing